# xdma-metapackage

./: .gitmodules  CMakeLists.txt  README.md  dkms-run.sh  dkms.conf.in  postinst.in  prerm.in
debian/: postinst  postinst.in  prerm
dkms/: dkms-run.sh  dkms-run.sh.in  dkms.conf.in
udev/: xdma-udev-command.sh
